
  * OPSI.Backend.Backend got new context manager temporaryBackendOptions.
  * Removed various obsolete modules.
  * OPSI.Util.Task.Rights: removed opsi-deploy-client-agent-default and
    opsi-deploy-client-agent-old from the list of known executables.
  * PackageControlFile: no more support for opsi3 compatible packages.
  * Removed support for incremental packages.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Mon, 09 Jan 2017 15:38:26 +0100

python-opsi (4.1.1.1-1) experimental; urgency=medium

  * OPSI.Logger, OPSI.Object, OPSI.System.Posix, OPSI.System.Windows,
    OPSI.Util and the modules in OPSI.Backend now provide __all__.
  * JSONRPCBackend: Avoid using "async" as name for a variable because
    this will become a keyword with Python 3.5.
  * ConfigurationData.initializeConfigs now creates entries for
    opsiclientd.event_user_login.active and
    opsiclientd.event_user_login.action_processor_command by default.
  * Removed parts of an old message bus implementation.
  * Replacing the deprecated module 'new' with 'types'.
  * SQLBackend: Filter creation is done through generators.
  * OPSI.Util.objectToBeautifiedText now uses the json module instead of
    a custom implementation.
  * Removed unsupported backends: Cache, Multiplex, LDAP.
  * ThreadPool: removed functions __createWorker & __deleteWorker.
  * Removed unused function OPSI.Util.flattenSequence.
  * OPSI.Backend.Backend implemented the protocol for being used as a
    context manager.
  * setup.py will patch the first version found in debian/changelog
    into OPSI/__init__.py to always show the current version.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Tue, 04 Oct 2016 16:15:11 +0200

python-opsi (4.0.7.33-1) experimental; urgency=medium

  * OPSI.Service.SSLContext: new parameter acceptedCiphers to limit the
    ciphers a context accepts.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Wed, 11 Jan 2017 15:05:07 +0100

python-opsi (4.0.7.32-1) experimental; urgency=medium
