@@ -2,14 +2,14 @@ Source: python-opsi
 Section: opsi
 Priority: optional
 Maintainer: uib GmbH <info@uib.de>
-Build-Depends: gettext, debhelper (>= 7.0.50~), dh-python | python-support, python (>= 2.6), python-setuptools, lsb-release
-X-Python-Version: >= 2.6
+Build-Depends: gettext, debhelper (>= 7.0.50~), dh-python | python-support, python (>= 2.7), python-setuptools, lsb-release
+X-Python-Version: >= 2.7
 Standards-Version: 3.9.4
 
 Package: python-opsi
 Section: opsi
 Architecture: all
-Depends: lsb-release, python-twisted-web, python-twisted-conch, python-magic, python-crypto, python-newt, python-pam, python-openssl | python-pyopenssl, python-mysqldb, python-sqlalchemy, iproute, duplicity, python-m2crypto, lshw, python(>=2.6), python-ldaptor, ${misc:Depends}, ${python:Depends}
+Depends: lsb-release, python-twisted-web, python-twisted-conch, python-magic, python-crypto, python-newt, python-pam, python-openssl | python-pyopenssl, python-mysqldb, python-sqlalchemy, iproute, duplicity, python-m2crypto, lshw, python(>=2.7), python-ldaptor, ${misc:Depends}, ${python:Depends}
 Recommends: cabextract
 Provides: ${python:Provides}
 Description: opsi python library
