@@ -1,11 +1,7 @@
 pytest >= 3.0
 pytest-cov >= 2.3.1
-astroid<1.3
-pylint<1.4
-flake8<3.0  # 3.0 dropped support for Python 2.6
+pylint
+flake8
 
 # Required for testing
 mock
-
-# Backports for Python 2.6
-unittest2
